# django-map-widgets

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  GOOGLE_PLACES_MIGRATION.md  LICENSE  LLM_CODE_STYLE.md  MANIFEST.in  MIGRATION_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README.rst  Taskfile.dist.yml  UNLICENSE  deps.edn  docker-compose.yml  fabfile.py  manage.py  package.json  pyproject.toml  readme-twice  scripts.py  setup.cfg  setup.py  test_places_migration.py
.changeset/: 0000-0.5.3-release.md  0000-0.5.4-release.md  0000-0.6.0-release.md  0000-django60-support.md  0000-leaflet-geosearch.md  0000-leaflet-polygon-widget.md  0000-leaflet-reverse-geocode.md
.claude/commands/: add-widget.md  minify.md  release.md
.clojure-mcp/: config.edn
.github/workflows/: ci.yml
conf/: requirements-dev.txt  requirments-dev.txt  web_entrypoint.sh
demo/: README.md  manage.py
demo/cities/: admin.py  forms.py  models.py  urls.py  views.py
demo/cities/migrations/: 0001_initial.py  0002_city.py
demo/demo/: asgi.py  db.py  settings.py  urls.py  wsgi.py
demo/example/: settings.py
demo/googlemap/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
demo/leaflet/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
demo/mapbox/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
demo/static/css/: bootstrap.css
demo/templates/: base.html  index.html
docs/: Makefile  conf.py  index.rst  make.bat
docs/contribution/: index.rst
docs/installation/: index.rst
docs/releases/: index.rst  v0.1.8.rst  v0.1.9.rst
docs/widgets/: google_point_field_inline_map_widgets.rst  google_point_field_map_widgets.rst  google_static_map_widget.rst  google_static_map_widgets.rst  google_static_overlay_map_widget.rst  google_static_overlay_map_widgets.rst  index.rst  mapbox_point_field_map_widgets.rst  point_field_inline_map_widgets.rst  point_field_map_widgets.rst  settings.rst
example/cities/: admin.py  forms.py  models.py  urls.py  views.py
example/example/: settings.py  urls.py  wsgi.py
example/templates/: base.html  index.html
mapwidgets/: __init__.py  constants.py  fields.py  settings.py  static_maps.py  utils.py  widgets.py
mapwidgets/widgets/: __init__.py  base.py  googlemap.py  leaflet.py  mapbox.py  mixins.py
(+197 files in other folders)
