[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Erdem Ozkol <github@erdemozkol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
django = "^5.0.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py312"]
extend-exclude = "(/dist|/.venv|/venv|/env|/build)/"
